# stardew-valley-ai

./: .env.sample  .gitignore  Makefile  README.md  data.json  pyproject.toml  used_files.json
.github/workflows/: ci.yml
app/: dependencies.py  main.py
app/agent/: agent.py  tools.py
app/api/: dependencies.py  main.py
app/api/agent/: router.py  schemas.py
app/api/auth/: router.py  service.py
app/api/users/: router.py  schemas.py  service.py
app/core/security/: hashing.py  jwt.py
app/data/: stardew_info_data_source.py
app/domain/: get_stardew_info_use_case.py
app/mock/: db.py
app/routers/: auth.py  users.py
app/services/: auth_service.py  user_service.py
app/tests/: conftest.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_users.py
common/utils/: open_router_manager.py
data_ingestion/: chunking_pipeline.py
data_ingestion/data/: local_files_datasource.py  qdrant_datasource.py  wiki_datasource.py
data_ingestion/models/: chunk_metadata.py  enriched_chunk.py  page_data.py  strings_to_ignore.py
data_ingestion/pipelines/: chunking_pipeline.py  ingestion_pipeline.py
data_ingestion/use_cases/: clean_output_files_use_case.py  enrich_page_use_case.py  extract_page_use_case.py  ingest_chunks_use_case.py  search_knowledge_use_case.py
data_ingestion/utils/: open_router_manager.py  print_with_timestamp.py
models/: chunk_metadata.py
openspec/changes/archive/2026-04-19-langchain-agent-migration/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-recreate-agent-api-authenticated/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-19-stardew-ai-agent/: design.md  proposal.md
openspec/changes/archive/2026-04-19-stardew-ai-agent/specs/stardew-agent/: spec.md
openspec/changes/recreate-agent-api-authenticated/specs/agent-chat/: spec.md
openspec/changes/stardew-ai-agent/: tasks.md
openspec/changes/stardew-ai-agent/specs/stardew-datasource/: spec.md
openspec/specs/agent-chat/: spec.md
openspec/specs/stardew-agent/: spec.md
openspec/specs/stardew-datasource/: spec.md
tests/: conftest.py
tests/agent/: test_agent_router.py  test_get_starde_info_use_case.py  test_stardew_info_data_source.py  test_tools.py
tests/auth/: test_login.py  test_logout.py  test_refresh.py
tests/users/: test_users.py
utils/: __init__.py  open_router_manager.py  print_with_timestamp.py
(+1 files in other folders)
